programming-language/workspace/compiler/tests/fixtures/invalid/duplicate_function.cb64
# Duplicate function definition
def foo():
    pass

def foo():
    pass

def main():
    pass
